--- a/app/assets/stylesheets/admins/tops.scss
+++ b/app/assets/stylesheets/admins/tops.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the admins/tops controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+
+.pad {
+  padding: 50px 0 50px 0;
+}
+.mar {
+  margin: 50px 0 50px 0;
+}
