--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
   </head>
 
   <body>
-    <%= yield %>
+  	<class = container>
+  		<class = row>
+		    <%= yield %>
+  		</class>
+  	</class>
   </body>
 </html>
