--- a/app/views/admins/items/show.html.erb
+++ b/app/views/admins/items/show.html.erb
@@ -55,7 +55,7 @@
       <td>フォーム</td>
       <td></td>
       <td></td>
-      <td><%= link_to "このdiscを編集する", admins_artist_item_disc_path(@artist, @item, disc) %></td>
+      <td><%= link_to "このdiscを編集する", admins_item_disc_path(@item, disc) %></td>
     </tr>
     <% end %>
   </table>
