--- a/app/views/admins/top.html.erb
+++ b/app/views/admins/top.html.erb
@@ -9,7 +9,7 @@
   <% end %>
 
 
-  <%= link_to  do %>
+  <%= link_to admins_users_path do %>
   <button type="button" class="btn btn-primary btn-block mar"><div class="pad">ユーザー</div></button>
   <% end %>
 
