--- a/app/views/admins/artists/new.html.erb
+++ b/app/views/admins/artists/new.html.erb
@@ -74,7 +74,7 @@
 
 <div class="col-lg-5 bg-secondary circle">
 <h2 class="my-5 border-bottom text-light">アーティストが登録されていない場合</h2>
-<%= form_for(@artist) do |f| %>
+<%= form_for(@artist, :url => {:controller => :artists, :action => :create}) do |f| %>
     <%= f.text_field :artist_name %>
     <%= f.submit "アーティストを追加する"%>
 <% end %>
