--- a/app/views/admins/artists/show.html.erb
+++ b/app/views/admins/artists/show.html.erb
@@ -11,12 +11,12 @@
   <% @items.each do |item| %>
   <tr>
     <td><%= item.album_name %></td>
-    <td><%= link_to "この商品の詳細へ", admins_artist_item_path(@artist,item) %></td>
+    <td><%= link_to "この商品の詳細へ", admins_item_path(item) %></td>
   </tr>
   <% end %>
 </table>
 
 
-<p><%= link_to "このアーティストの商品を追加する",new_admins_artist_item_path(@artist) %></p>
+<p><%= link_to "このアーティストの商品を追加する",new_admins_item_path(@artist) %></p>
 
 <p><%= link_to "アーティスト選択画面に戻る", new_admins_artist_path %></p>
