--- a/app/assets/stylesheets/admins/artists.scss
+++ b/app/assets/stylesheets/admins/artists.scss
@@ -1,3 +1,44 @@
 // Place all the styles related to the admins/artists controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+/*header*/
+
+
+
+/*文字のうめこみ*/
+.caption_box{
+  position: relative;
+
+  margin-top: 1em;
+  padding: 1em 2em;
+  border: 2px solid gray;
+  border-radius: 20px;
+}
+
+.caption_box .caption{
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0 1em;
+  margin: 0;
+  background-color: white;
+  transform: translateY(-50%) translateX(1em);
+}
+
+.caption {
+	font-size: 30px;
+	border-bottom: solid 2px gray;
+}
+
+
+.circle {
+	border-radius: 20px;
+}
+
+
+/*artist/show css*/
+
+
+
+
+
