--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
  *= require_self
  */
 
+// Custom bootstrap variables must be set or imported *before* bootstrap.
  @import "bootstrap-sprockets";
  @import "bootstrap";
 
