--- a/app/views/admins/artists/new.html.erb
+++ b/app/views/admins/artists/new.html.erb
@@ -1,95 +1,15 @@
-<div id="wrapper">
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-  <a class="circle-plus-icon text-danger" href="">Circle <span style="color:#fff;">Plus</span></a>
-   <a class="guest text-muted" href="">ゲスト様</a>
-<!-- ナビ内容 -->
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-    <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
-      <li class="nav-item">
-        <a class="nav-link" href="#">
-        	新規登録 <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">
-        	ログイン <span class="glyphicon glyphicon-check" aria-hidden="true"></span>
-        </a>
-      </li>
-    </ul>
-  </div>
-</nav>
-<div class="header-box"></div>
-<!-- hederここまで -->
+<h1>Admins::Artists#new</h1>
+<p>Find me in app/views/admins/artists/new.html.erb</p>
+<p>アーティスト一覧・新規追加</p>
 
-
-<!-- body -->
-
-<h1 class="my-5 text-center border-bottom">行いたいことはなんですか？</h1>
-
-<div class="container">
-<div class="row">
-<div class="caption_box col-lg-10 mx-auto mb-5">
-<h2 class="caption">商品の追加・編集</h2>
-<ol class="mt-5">
-  <li class="pb-3">商品を追加したいアーティストを検索</li>
-  <li class="pb-3">アーティストを選択し、商品一覧へ行く</li>
-  <li class="pb-3">編集したい商品の選択・商品の新規作成</li>
-</ol>
-</div>
-
-<div class="caption_box col-lg-10 mx-auto mb-5">
-<h2 class="caption">Diskの追加・編集</h2>
-<ol class="mt-5">
-  <li class="pb-3">商品を追加したいアーティストを検索</li>
-  <li class="pb-3">アーティストを選択し、商品一覧へ行く</li>
-  <li class="pb-3">編集したい商品の選択</li>
-  <li class="pb-3">商品の詳細へ行きDiskを編集・Diskの新規登録</li>
-</ol>
-</div>
-
-<div class="caption_box col-lg-10 mx-auto mb-5">
-<h2 class="caption">曲の追加・編集</h2>
-<ol class="mt-5">
-  <li class="pb-3">商品を追加したいアーティストを検索</li>
-  <li class="pb-3">アーティストを選択し、商品一覧へ行く</li>
-  <li class="pb-3">編集したい商品の選択</li>
-  <li class="pb-3">編集したいDiskを選択</li>
-  <li class="pb-3">Diskの詳細へ行き曲を編集・新規追加</li>
-</ol>
-</div>
-</div>
-</div>
-
-<div class="container">
-<div class="row">
-<div class="col-lg-1"></div>
-<div class="col-lg-5">
-<h2 class="my-5 border-bottom">商品を追加・編集したいアーティストを選択してください。</h2>
 <% @artists.each do |artist| %>
   <ul>
-    <li><%= link_to artist.artist_name, admins_artist_path(artist)%></li>
+    <il><%= link_to artist.artist_name, admins_artist_path(artist)%></li>
   </ul>
 <% end %>
-</div>
 
-<div class="col-lg-5 bg-secondary circle">
-<h2 class="my-5 border-bottom text-light">アーティストが登録されていない場合</h2>
+<p>新しくアーティストを追加する</p>
 <%= form_for(@artist) do |f| %>
     <%= f.text_field :artist_name %>
     <%= f.submit "アーティストを追加する"%>
 <% end %>
-</div>
-<div class="col-lg-1"></div>
-
-</div>
-</div>
-
-<!-- body -->
-
-<!-- footer -->
-<footer class="footer bg-dark">
-  <div class="container">
-    <p class="text-light text-center">©2018 circle_plus</p>
-  </div>
-</footer>
-</div>
