--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>CirclePlus</title>
-  <%= csrf_meta_tags %>
+  <head>
+    <title>CirclePlus</title>
+    <%= csrf_meta_tags %>
 
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-</head>
-
-
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  </head>
 <body>
-  <div class="container">
-    <div class="row">
-      <%= yield %>
-    </div>
-  </div>
-</body>
+	<!-- headerをrenderで追加予定 -->
+
+		<%= yield %>
+
+<!-- footerを追加予定 -->
+  </body>
 </html>
