--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,29 +1,45 @@
-<h2>Sign up</h2>
+<h2>新規登録</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.label :氏名（カタカナ）　%>
+    <%= f.text_field :name_kana, autofocus: true ,placeholder: "氏名（カタカナ）" %>
+  </div>
+  <div class="field">
+    <%= f.label :氏名（漢字） %>
+    <%= f.text_field :name_kanji, autofocus: true ,placeholder: "氏名（漢字）"%>
+  </div>
+  <div class="field">
+    <%= f.label :ユーザーネーム %>
+    <%= f.text_field :user_name, autofocus: true,placeholder: "ユーザーネーム" %>
+  </div>
+  <div class="field">
+    <%= f.label :電話番号 %>
+    <%= f.text_field :phone_number, autofocus: true ,placeholder: "電話番号" %>
+  </div>
+  <div class="field">
+    <%= f.label :Email %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email",placeholder: "email" %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :パスワード %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <em>(最大<%= @minimum_password_length %>文字 )</em>
+    <% end %>
+    <%= f.password_field :password, autocomplete: "off" ,placeholder: "パスワード" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.label :パスワード確認 %>
+    <%= f.password_field :password_confirmation, autocomplete: "off",placeholder: "パスワード確認" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "新規登録" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<%= link_to "Topに戻る",top_path %>
