--- a/app/views/admins/users/show.html.erb
+++ b/app/views/admins/users/show.html.erb
@@ -9,6 +9,7 @@
 <p>購入商品名：<%= order_item.item.album_name %></p>
 <p>個数：<%= order_item.item_order_counted %></p>
 <p>商品単価：<%= order_item.item_order_price %></p>
-
+<div class="order-item-border"></div>
 <% end %>
+<div class="order-border"></div>
 <% end %>
