--- a/app/assets/stylesheets/admins/users.scss
+++ b/app/assets/stylesheets/admins/users.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the admins/users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.order-item-border {
+  border: solid #25489C;
+}
+.order-border {
+  border: medium solid #C4CA00;
+}
