--- a/app/views/admins/items/show.html.erb
+++ b/app/views/admins/items/show.html.erb
@@ -45,7 +45,7 @@
       <td>cnt</td>
       <td>曲名1</td>
       <td>
-        <%= link_to "このdiscの収録曲を編集する", admins_artist_item_disc_path(@artist, @item, disc), class: "btn btn-danger white-text" %>
+        <%= link_to "このdiscの収録曲を編集する", admins_item_disc_path(@artist, @item, disc), class: "btn btn-danger white-text" %>
       </td>
     </tr>
     <tr>
@@ -65,7 +65,7 @@
       <td>cnt</td>
       <td>曲名1</td>
       <td>
-        <%= link_to "このdiscの収録曲を編集する", admins_artist_item_disc_path(@artist, @item, disc), class: "btn btn-danger white-text" %>
+        <%= link_to "このdiscの収録曲を編集する", admins_item_disc_path(@artist, @item, disc), class: "btn btn-danger white-text" %>
       </td>
     </tr>
     <tr>
@@ -92,7 +92,7 @@
       <td></td>
       <td></td>
       <td>
-        <%= link_to "この商品のdiscを追加する", admins_artist_item_disc_path(@artist, @item, disc), class: "btn btn-danger white-text" %>
+        <%= link_to "この商品のdiscを追加する", admins_item_disc_path(@artist, @item, disc), class: "btn btn-danger white-text" %>
       </td>
     </tr>
 
