--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,12 +1,23 @@
-<h1>Items#show:商品の詳細</h1>
-<p>Find me in app/views/items/show.html.erb</p>
+<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+	<h1>Items#show:商品の詳細</h1>
+	<p>Find me in app/views/items/show.html.erb</p>
 
-<h2>商品の詳細</h2>
-<!-- item画像を入れます -->
-<p>アルバム名：<%= @item.album_name %></p>
-<p>アーティスト名：<%= @item.artist.artist_name %></p>
-<p>価格：<%= @item.item_price_tax_free %></p>
-<p>在庫<%= @item.stock %>点あり</p>
-<%= link_to "カートに入れる" %>
-<%= link_to "戻る" %>
-<!-- ブラウザの戻る機能 -->
+	<h2>商品の詳細</h2>
+	<div class = "row">
+		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 bg-info">
+			<!-- item画像を入れます -->
+		</div>
+		<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+		<div class="col-lg-7 col-md-7 col-sm-7 col-xs-7 bg-info">
+			<p>アルバム名：<%= @item.album_name %></p>
+			<p>アーティスト名：<%= @item.artist.artist_name %></p>
+			<p>価格：<%= @item.item_price_tax_free %></p>
+			<p>在庫<%= @item.stock %>点あり</p>
+			<%= link_to "カートに入れる", :back, class: "btn btn-danger white-text" %>
+			<%= link_to "前のページに戻る", :back, class: "btn btn-success white-text" %>
+			<!-- ブラウザの戻る機能 -->
+		</div>
+	</div>
+</div>
+<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
