user機能をある程度進めました

--- a/app/views/cart_items/index.html.erb
+++ b/app/views/cart_items/index.html.erb
@@ -13,6 +13,5 @@
 <% end %>
 
 <p>合計：\<%= @sum  %>円</p>
-<!-- の出し方がわからないのでメンターさんに聞きます。 -->
-
-<%= link_to "注文確定", %>
+<!-- 円マークの変更 -->
+<%= link_to "注文確定",new_user_order_path(current_user.id) %>
