--- a/app/views/items/search.html.erb
+++ b/app/views/items/search.html.erb
@@ -1,2 +1,6 @@
-<h1>Items#search</h1>
+<h1>Items#search：検索ページ</h1>
 <p>Find me in app/views/items/search.html.erb</p>
+
+<p>商品の検索ページ</p>
+
+<p>Ransackの利用</p>
