--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,19 +1,106 @@
-<h1>Items#index:TOPページ</h1>
-<p>Find me in app/views/items/index.html.erb</p>
 
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="..." alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="..." alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="..." alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
-<p>ジャンル</p>
+<div class="container">
+<div class="row">
+
+<!-- サイドバー　アーティスト -->
+<div class="col-lg-2 my-5 bg-secondary">
+<h3 class="text-light text-center my-3 border-bottom">ジャンル</h3>
+
 <% @genres.each do |genre| %>
-<%= link_to genre.genre_name , genre_path(genre.id) %></br>
+<%= link_to genre.genre_name , genre_path(genre.id), class:"badge badge-warning my-2" %></br>
 <% end %>
+
+
+
+</div>
+
+
+
+
+<!-- メインカラム -->
+<div class="col-lg-10 my-5">
+
+<div class="container">
+<div class="row">
 
 <% @items.each do |item| %>
+<div class="card col-lg-4 mx-auto mb-3" style="width: 18rem;">
+  <img class="card-img-top mt-3" src="..." alt="Card image cap" style="height: 200px; background-color: gray; ">
+  <div class="card-body">
+    <h5 class="card-title"><%= item.album_name %></h5>
+    <h5 class="card-title"><%= item.artist.artist_name %></h5>
+    <h5 class="card-title">¥<%= item.item_price_tax_free %></h5>
+    <%= link_to "詳細ページ" ,item_path(item.id), class:"btn btn-primary" %>
+  </div>
+</div>
+ <% end %>
+
+</div>
+</div>
+
+<!-- ページャー -->
+<div class="mx-auto my-5">
+<nav aria-label="... ">
+  <ul class="pagination">
+    <li class="page-item disabled">
+      <span class="page-link">Previous</span>
+    </li>
+    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item active">
+      <span class="page-link">
+        2
+        <span class="sr-only">(current)</span>
+      </span>
+    </li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item">
+      <a class="page-link" href="#">Next</a>
+    </li>
+  </ul>
+</nav>
+</div>
 
 
-<%= item.album_name %></br>
-<%= item.artist.artist_name %></br>
-<%= item.item_price_tax_free %></br>
-<%= link_to "詳細ページ" ,item_path(item.id) %></br>
-<% end %>
+</div>
+
+
+
+
+
+
+
+</div>
+</div>
+
+
+
+
 
 <!-- pagenateをします -->
