--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <title>CirclePlus</title>
-    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-    <%= csrf_meta_tags %>
+<head>
+  <title>CirclePlus</title>
+  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+  <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-  <body>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
+<body>
 
  <!--  admin-signin-header -->
-<div id="wrapper">
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-  <a class="circle-plus-icon text-danger" href="">Circle <span style="color:#fff;">Plus</span></a>
-   <a class="guest text-muted" href="">管理者ページ</a>
-<!-- ナビ内容 -->
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-    <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
-      <li class="nav-item">
-        <a class="nav-link" href="#">
-        	ユーザー一覧
-        </a>
-      </li>
-      <li class="nav-item">
+ <div id="wrapper">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+    <a class="circle-plus-icon text-danger" href="">Circle <span style="color:#fff;">Plus</span></a>
+    <a class="guest text-muted" href="">管理者ページ</a>
+    <!-- ナビ内容 -->
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
+        <li class="nav-item">
+          <a class="nav-link" href="#">
+           ユーザー一覧
+         </a>
+       </li>
+       <li class="nav-item">
         <a class="nav-link" href="#">
         	CD一覧
         </a>
@@ -34,10 +34,9 @@
           CD新規追加
         </a>
       </li>
-       <li class="nav-item">
-        <a class="nav-link" href="#">
-          サインアウト 
-        </a>
+      
+      <li class="nav-item">
+        <%= link_to "サインアウト", destroy_user_session_path, method: :delete ,class: "nav-link" %>
       </li>
     </ul>
   </div>
@@ -45,7 +44,7 @@
 <div class="header-box"></div>
 <!-- headerここまで -->
 
-    <%= yield %>
+<%= yield %>
 
 <!-- footer -->
 <footer class="footer bg-dark">
@@ -56,6 +55,6 @@
 </div>
 <!-- footerここまで -->
 
-  </body>
+</body>
 
 </html>
