--- a/app/views/admins/status.html.erb
+++ b/app/views/admins/status.html.erb
@@ -1,10 +1,9 @@
-<h1>Admins::Users#show</h1>
-<p>Find me in app/views/admins/users/show.html.erb</p>
+<h1>Admins#status</h1>
+<p>Find me in app/views/admins/status.html.erb</p>
 
-<p>購入履歴</p>
 
-<% @user.orders.each do |order| %>
-<p>購入日 <%= order.created_at %> </p>
+<% @orders.each do |order| %>
+<p>購入日 <%= order.created_at %>----<%= order.status %> </p>
 <% order.order_items.each do |order_item| %>
 <p>購入商品名：<%= order_item.item.album_name %></p>
 <p>個数：<%= order_item.item_order_counted %></p>
