--- a/app/views/admins/top.html.erb
+++ b/app/views/admins/top.html.erb
@@ -13,10 +13,10 @@
   <button type="button" class="btn btn-primary btn-block mar"><div class="pad">ユーザー</div></button>
   <% end %>
 
-  <%= link_to  do %>
+  <%= link_to admins_stock_path do %>
   <button type="button" class="btn btn-success btn-block mar"><div class="pad">在庫</div></button>
   <% end %>
-  <%= link_to  do %>
+  <%= link_to admins_status_path do %>
   <button type="button" class="btn btn-info btn-block mar"><div class="pad">配送状況</div></button>
   <% end %>
   <p><%= link_to "logout", destroy_admin_session_path, method: :delete%></p>
