--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,33 +14,27 @@
  *= require_self
  */
 
- .btn-secondary {
-	margin: 5px
-}
-
 .nav-link {
 	font-size: 16px;
 }
 
 .circle-plus-icon {
-	font-size: 24px;
+	font-size: 25px;
+	font-family: 'Monoton', cursive;
 }
+
+
 
 .guest {
 	font-size: 20px;
-	color: #fff;
-	margin-left: 15px;
-}
-
-.header-box {
-	height: 56px;
-	width: 100%;
+	margin-left: 20px;
 }
 
 
  html, body {
   height: 100%;
   margin: 0;
+  padding: 0;
 }
 
 /*footerをページ下部に固定させる処理*/
@@ -49,19 +43,21 @@
   min-height: 100%;
 }
 .content-inside {
-  padding: 20px;
   padding-bottom: 50px;
 }
 .footer {
-  height: 50px;
+  height: 60px;
   margin-top: -50px;
+  display: table;
+  width: 100%;
+
 }
  
 #footer-text {
-	color: #f8f9fa;
-	text-align: center;
 	font-size: 20px;
-	margin: 15px 0 0 0;
+	text-align: center;
+	display: table-cell;
+	vertical-align: middle;
 }
 
 
