--- a/app/views/admins/items/show.html.erb
+++ b/app/views/admins/items/show.html.erb
@@ -32,8 +32,8 @@
   </tbody>
 </table>
 
-
   <h3 class="my-5">含まれているdisc一覧</h3>
+
 
 <table class="table">
   <thead class="thead-light">
@@ -51,6 +51,7 @@
       <th scope="row"><%= disc.disc_type %></th>
       <td>cnt</td>
       <td>
+      <%= disc.id %>
       <!-- 折りたたみコンテンツ　曲名一覧 -->
       <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
       <i class="fas fa-caret-down"></i> 曲名一覧
@@ -59,7 +60,7 @@
         <div class="card card-body">
         <% @songs.each do |song| %><!-- 曲名のeach -->
          <ul>
-          <li><%= song.song_name %></li>
+          <li><%= disc.id %><%= song.song_name %></li>
         </ul>
         <% end %>
         </div>
