--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -2,6 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
+
+
+
+
+/*ジャンルバー*/
 .carousel-item {
 	width: 100%;
 	height: 500px;
@@ -50,14 +56,17 @@
   top: 60px;
   left: 0;
   z-index: 9999;/*最前面に*/
-  width: 90%;/*右側に隙間を作る（閉じるカバーを表示）*/
-  max-width: 330px;/*最大幅（調整してください）*/
-  height: 100%;
+  width: 100%;/*右側に隙間を作る（閉じるカバーを表示）*/
+  max-width: 100%;/*最大幅（調整してください）*/
+  height: 100px;
   background: #EEEEEE;/*背景色*/
   transition: .3s ease-in-out;/*滑らかに表示*/
   -webkit-transform: translateX(-105%);
   transform: translateX(-105%);/*左に隠しておく*/
 }
+
+
+
 
 /*チェックが入ったらもろもろ表示*/
 #nav-input:checked ~ #nav-close {
@@ -72,6 +81,15 @@
 }
 
 
-.display-none {
-	display: none;
+/*メインカラム　カード*/
+.button-center {
+  text-align: center; 
 }
+
+
+.card-button {
+  display: inline-block;
+  width: 200px;
+  margin: 0 auto;
+}
+
