--- a/app/views/admins/users/index.html.erb
+++ b/app/views/admins/users/index.html.erb
@@ -1,20 +1,34 @@
 <h1>Admins::Users#index</h1>
 <p>Find me in app/views/admins/users/index.html.erb</p>
 
+<div class="container">
+<div class="row">
 
-<table>
-  <tr>
-    <th>ユーザー名（漢字）</th>
-    <th>住所</th>
-    <th>編集</th>
-    <th>購入履歴一覧</th>
-  </tr>
+<table class="col-lg-12 table table-striped">
+  <thead>
+    <tr>
+      <th scope="col">ユーザー名（漢字）</th>
+      <th scope="col">住所</th>
+      <th scope="col">編集</th>
+      <th scope="col">購入履歴</th>
+    </tr>
+  </thead>
   <% @users.each do |user| %>
-  <tr>
-    <td><%= user.name_kanji %></td>
-    <td><%= user.address %></td>
-    <td><%= link_to "編集",edit_admins_user_path(user)%></td>
-    <td><%= link_to "購入履歴一覧",admins_user_path(user)%></td>
-  </tr>
+  <tbody>
+    <tr>
+      <th scope="row"><%= user.name_kanji %></th>
+      <td><%= user.address %></td>
+      <td>
+        <%= link_to edit_admins_user_path(user), class:"btn btn-primary" do %>
+        <i class="fas fa-wrench"></i>
+        <% end %>
+      </td>
+      <td><%= link_to "購入履歴一覧へ",admins_user_path(user), class:"btn btn-info" %></td>
+    </tr>
+  </tbody>
   <% end %>
 </table>
+
+</div>
+</div>
+
