--- a/app/views/admins/users/show.html.erb
+++ b/app/views/admins/users/show.html.erb
@@ -1,13 +1,43 @@
 <h1>Admins::Users#show</h1>
 <p>Find me in app/views/admins/users/show.html.erb</p>
 
-<p>購入履歴</p>
+<h2 class="border-bottom text-center my-5">
+	<%= @user.name_kanji %> さんの購入履歴
+</h2>
 
-<% @user.orders.each do |order| %>
-<p>購入日 <%= order.created_at %> </p>
-<% order.order_items.each do |order_item| %>
-<p>購入商品名：<%= order_item.item.album_name %></p>
-<p>個数：<%= order_item.item_order_counted %></p>
-<p>商品単価：<%= order_item.item_order_price %></p>
-<% end %>
-<% end %>
+<div class="container">
+<div class="row">
+
+<table class="col-lg-12 table">
+  <thead>
+    <tr>
+      <th scope="col">購入日</th>
+      <th scope="col">購入したもの</th>
+    </tr>
+  </thead>
+  <% @user.orders.each do |order| %>
+  <tbody>
+    <tr>
+      <th scope="row"><%= order.created_at %></th>
+      <td>
+      	   <table class="table">
+			  <% order.order_items.each do |order_item| %>
+			  <tbody>
+			    <tr class="table-secondary">
+			      <td><%= order_item.item.album_name %></td>
+			      <td><%= order_item.item_order_counted %></td>
+			      <td>¥<%= order_item.item_order_price %></td>
+			    </tr>
+			  </tbody>
+			  <% end %>
+			</table>
+
+
+      </td>
+    </tr>
+  </tbody>
+  <% end %>
+</table>
+
+</div>
+</div>
